fixing overlap in titles

--- a/personalwebsitestyle.css
+++ b/personalwebsitestyle.css
@@ -38,7 +38,8 @@ body {
 
 #greeting {
     font-size: 100px;
-    line-height: 20px;
+    position: relative;
+    word-wrap: break-word;
     animation-name: slide-up;
     animation-duration: 1.8s;
     animation-delay: none;
@@ -47,7 +48,6 @@ body {
 
 .title {
     font-size: 70px;
-    line-height: 20px;
     animation-name: slide-up;
     animation-duration: 0.7s;
     animation-delay: none;
@@ -297,6 +297,7 @@ body {
 
 #contact-options-placement {
     display: flex;
+    position: relative;
     height: 100%;
     justify-content: center;
     margin-top: 40px;
